--- a/config/locales/pundit.yml
+++ b/config/locales/pundit.yml
@@ -8,3 +8,5 @@ en:
       record_belongs_to_user?: "Record does not belong to user"
       records_belongs_to_user?: "Records do not belong to user"
       user_owns_notes?: "User does not own selected notes"
+      user_is_premium?: "Feature is not available for non-premium users"
+      user_can_create_over_note_limit?: "User cannot create more notes, upgrade to premium"
